custom run time (jre) generated for com.greetings module